fix misalignment of flags on calendar

--- a/RaceResultsBlazor.App/Components/CalendarItem.razor.css
+++ b/RaceResultsBlazor.App/Components/CalendarItem.razor.css
@@ -113,7 +113,6 @@
 
 .calendar-track-flag {
     height: 32px;
-    margin: 0px 0px -4px 0px;
     border-radius: 6px;
     user-select: none;
 }
